--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,13 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0",
-        "guzzlehttp/guzzle": ">=4.0,<7.0"
+        "php": ">=8.0.0",
+        "guzzlehttp/guzzle": "^6.5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8.*",
-        "evert/phpdoc-md" : "~0.2.0"
+        "phpunit/phpunit": "^10.0",
+        "evert/phpdoc-md" : "~0.2.0",
+        "rector/rector": "^1.1"
     },
     "autoload": {
         "psr-4": {"Freshdesk\\": "src/"}
